created the class container for the home page and styled it to bring the background image and logo

--- a/index.html
+++ b/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>DELANI</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <p></p>
+    <div class="container">
+        <div class="home">
+            <logo id="image"></logo>
+            <img src="images/logo.png" alt="">
+            <h1>WELCOME</h1>
+            <h1>TO DELANI </h1>
+            <p>AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+        </div>
+        
+    </div>
+    <div class="jumbotron" style="background-color: white;">
+
+
+    </div>
+    
 </body>
 </html>
