--- a/index.html
+++ b/index.html
@@ -10,18 +10,29 @@
 <body>
     <div class="container">
         <div class="home">
-            <logo id="image"></logo>
-            <img src="images/logo.png" alt="">
+            <logo id="image">
+            <img src="images/logo/logo.png" alt="logo">
             <h1>WELCOME</h1>
-            <h1>TO DELANI </h1>
+            <h1>TO DELANI STUDIO</h1>
             <p>AMAZING PEOPLE ARE DOING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
+            <img src="" alt="">
         </div>
         
     </div>
-    <div class="jumbotron" style="background-color: white;">
-
-
+    <div class="jumbotron text-center" style="background-color: white;">
+        <h2>ABOUT US</h2>
+        <p>When you work with us ,you are part of a team of comitted collaborators.All aspects of our software developement process are intergrated,interactive and agile.
+            our approach unifies design,developement and product management to create exceptional products.
+            We start each project by understanding your business goals,the user's needs and the product requirements.
+            Then we help translate them into effective and elegant solutions.
+        </p>
     </div>
-    
+    <div class="services">
+        <h2>SERVICES</h2>
+        <p>Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision.
+            The outcome of this scooping session is proporsal or high level statement of work based on your requirements,we can provide a complete offering or just the pieces you need. 
+        </p>
+    </div>
+    <div></div>
 </body>
 </html>
