commented the table out bacause the spacing didnt work well.had to use div class

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             The outcome of this scooping session is proporsal or high level statement of work based on your requirements,we can provide a complete offering or just the pieces you need. 
         </p>
     </div>
-    <!-- <div class="design">
+    <div class="design">
       <img src="assets/images/design_icon.png" alt="">
       <p>DESIGN</p>
     </div>
@@ -43,10 +43,10 @@
     </div>
     <div>
         <img src="assets/images/product_icon.png" alt="">
-        <p>PRODUCT MANAGEMENT</p>
-    </div> -->
-     <h3>WHAT WE DO</h3>
-    <table style="width: 700px; align-items: center;">
+        <p>PRODUCT MANAGEMENT</p> 
+     </div>
+     <!-- h3>WHAT WE DO</h3>
+    <t<able style="width: 700px; align-items: center;">
     
         <tc>
             <td>
@@ -66,6 +66,6 @@
                 <p>PRODUCT MANAGEMENT</p>
             </td>
         </tc>
-    </table>
+    </table> -->
 </body>
 </html>
