created the table of icons to bring the table data into collumns

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
-<body>
+<div>
     <div id="container">
         <div class="home">
             <logo id="image">
@@ -65,7 +65,180 @@
     <div class="row">
         <div class=""></div> 
     </div>
+</div> 
+ <div class="portfolio"style="overflow-x:hidden;">
+<table>
+    <tc>
+        <td id="c">
+            <img src="../assets/portfolio/c_image.jpg " alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+        <img src="../assets/images/work3.jpg" alt="">
+    </td>
+    </tc>
+    <tc>
+        <td>
+        <img src="../assets/images/work2.jpg " alt="">
+    </td>
+    </tc>
+    <tc>
+        <td>
+        <img src="../assets/images/work4.jpg" alt="">
+    </td>
+    </tc>
+</table>
+<table> 
+    <tc>
+        <td>
+            <img src="../assets/images/work5.jpg" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="../assets/images/work6.jpg" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="../assets/images/work7.jpg" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="../assets/images/work8.jpg" alt="">
+        </td>
+    </tc>
+
+</table> 
+<!-- </div> -->
+<!-- <div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <img src="../assets/portfolio/c_image.jpg " alt="">
+        </div>
+        <div class="col-md-3">
+            <img src="../assets/images/work3.jpg" alt="">
+        </div>
+        <div class="col-md-3">
+            <img src="../assets/images/work2.jpg" alt="">
+        </div>
+    <div class="col-md-3">
+        <img src="../assets/images/work4.jpg" alt=""> 
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <img src="../assets/images/work5.jpg" alt="">
+        </div>
+        <div class="col-md-3">
+            <img src="../assets/images/work6.jpg" alt="">
+        </div>
+        <div class="col-md-3">
+            <img src="../assets/images/work7.jpg" alt="">
+        </div>
+    <div class="col-md-3">
+        <img src="../assets/images/work8.jpg" alt="">
+    </div>
+    </div>
+</div> -->
+<div class="contact">
+    <h3>CONTACT US</h3>
+ <form>
+     <div class="row">
+         <div class="col-md-2">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" placeholder="Name...">
 </div>
+
+  </form>
+  <form>
+        <div class="col-md-9">
+   <label for="email">Email:</label><br>
+   <input type="text" id="email"  placeholder="Email...">
+</div>
+</div>
+ </form>
+ <form>
+    <div class="row">
+        <div class="col-md-12">
+   <label for="your message here">your message here:</label><br>
+   <input type="text" id="your message here" placeholder="Your message here...">
+</div>
+</div>
+<input type="submit" value="submit">
+ </form>
+</div>
+<!-- <div class="social">
+    <div class="row">
+    <div class="col-md-6">
+        <img src="/assets/images/twitter.png" alt="">
+    </div>
+    <div class="col-md-8">
+        <img src="/assets/images/dribble.png" alt="">
+    </div>
+    <div class="col-md-">
+        <img src="/assets/images/facebook.png" alt="">
+
+    </div>
+
+</div>
+
+</div> -->
+
+<table>
+    <tc>
+        <td>
+            <img src="/assets/images/twitter.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/dribble.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/facebook.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/g_plus.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/skype.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/stumble_upon.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/behance.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/pinterest.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/flickr.png" alt="">
+        </td>
+    </tc>
+    <tc>
+        <td>
+            <img src="/assets/images/you_tube.png" alt="">
+        </td>
+    </tc>
+</table>
 
 </body>
 </html>
