added the footer class and the links of jquery and javascript to make the javascript and jquery functional

--- a/index.html
+++ b/index.html
@@ -66,48 +66,48 @@
         <div class=""></div> 
     </div>
 </div> 
- <div class="portfolio"style="overflow-x:hidden;">
-<table>
+ <div class="portfolio"style="overflow-x:hidden;"><br>
+<table style="height: 5px;">
     <tc>
         <td id="c">
-            <img src="../assets/portfolio/c_image.jpg " alt="">
+            <img src="../assets/portfolio/c_image.jpg " alt=""><br>
         </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work3.jpg" alt="">
+        <img src="../assets/images/work3.jpg" alt=""><br>
     </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work2.jpg " alt="">
+        <img src="../assets/images/work2.jpg " alt=""><br>
     </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work4.jpg" alt="">
+        <img src="../assets/images/work4.jpg" alt=""><br>
     </td>
     </tc>
 </table>
 <table> 
     <tc>
         <td>
-            <img src="../assets/images/work5.jpg" alt="">
+            <img src="../assets/images/work5.jpg" alt=""><br>
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work6.jpg" alt="">
+            <img src="../assets/images/work6.jpg" alt=""><br>
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work7.jpg" alt="">
+            <img src="../assets/images/work7.jpg" alt=""><br>
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work8.jpg" alt="">
+            <img src="../assets/images/work8.jpg" alt=""><br>
         </td>
     </tc>
 
@@ -147,24 +147,24 @@
     <h3>CONTACT US</h3>
  <form>
      <div class="row">
-         <div class="col-md-2">
+         <div class="col-md-6">
     <label for="name">Name:</label><br>
-    <input type="text" id="name" placeholder="Name...">
+    <input type="text" id="name" placeholder="Name..." style="background-color: transparent;">
 </div>
 
   </form>
   <form>
-        <div class="col-md-9">
+        <div class="col-md-6">
    <label for="email">Email:</label><br>
-   <input type="text" id="email"  placeholder="Email...">
+   <input type="text" id="email"  placeholder="Email..." style="background-color: transparent;">
 </div>
 </div>
  </form>
  <form>
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
    <label for="your message here">your message here:</label><br>
-   <input type="text" id="your message here" placeholder="Your message here...">
+   <input type="text" id="your message here" placeholder="Your message here..."style="background-color:transparent">
 </div>
 </div>
 <input type="submit" value="submit">
@@ -187,7 +187,7 @@
 
 </div> -->
 
-<table>
+<table style="flex-direction: column-reverse;">
     <tc>
         <td>
             <img src="/assets/images/twitter.png" alt="">
@@ -239,6 +239,11 @@
         </td>
     </tc>
 </table>
-
+<div class="footer">
+    <h3>DELANI STUDIO</h3>
+    <p>2020</p>
+</div>
+<script src="js/jquery.js"></script>
+   <script src="js/script.js"></script>
 </body>
 </html>
