placed the table inside a div to bring the layout

--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 </div>
 
 </div> -->
-
-<table style="flex-direction: column-reverse;">
+<div class="span">
+<table style="padding-left: 200px;">
     <tc>
         <td>
             <img src="/assets/images/twitter.png" alt="">
@@ -239,11 +239,12 @@
         </td>
     </tc>
 </table>
+</div>
 <div class="footer">
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
 </div>
-<script src="js/jquery.js"></script>
-   <script src="js/script.js"></script>
+<script src="jquery.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
