--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
    <input type="text" id="your message here" placeholder="Your message here..."style="background-color:transparent">
 </div>
 </div>
-<input type="submit" value="submit">
+<button type="button" onclick="myFunction()">Submit</button>
  </form>
 </div>
 <!-- <div class="social">
@@ -244,7 +244,7 @@
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
 </div>
-<script src="jquery.js"></script>
-   <script src="script.js"></script>
+<script src="/js/jquery.js"></script>
+   <script src="js/script.js"></script>
 </body>
 </html>
