made changes in the div class social..removed the table to use div for the layout

--- a/index.html
+++ b/index.html
@@ -37,36 +37,60 @@
             The outcome of this scooping session is proporsal or high level statement of work based on your requirements,we can provide a complete offering or just the pieces you need. 
         </p>
     </div>
-    <div class="do">
-    <div class="row">
+    <!-- <div class="What we do"> -->
+        <div class="row">
+            <div class="col-md-4">
+                <img src="assets/images/design_icon.png" alt="">
+            </div>
+            <div class="col-md-4">
+                <img src="assets/images/dev_icon.png" alt="">
+            </div>
+            <div class="col-md-4">
+                <img src="assets/images/product_icon.png" alt="">
+            </div>
+        </div>
+    <!-- </div><img src="assets/images/product_icon.png" alt=""> -->
+    <!-- <div class="do"> -->
+    <!-- <div class="row">
         <div class="col-md-4">
       <img src="assets/images/design_icon.png" alt="">
-      <p>DESIGN</p>
+      <h5>DESIGN</h5>
+      <div class="design">
+      <p>Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing. Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.</p>
     </div>
+</div>
+   
 
 
     <div>
         <div class="col-md-4">
         <img src="assets/images/dev_icon.png" alt="">
-        <p>DEVELOPMENT</p>
+        <h5>DEVELOPMENT</h5>
+        <div class="dev">
+        <p>All engineers are fluent in the latest enterprise, mobile and web development technologies. They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.</p>
+        </div>
     </div>
 </div>
-
-
     <div class="col-md-4">
         <img src="assets/images/product_icon.png" alt="">
-        <p>PRODUCT MANAGEMENT</p> 
-     </div>
+        <h5>PRODUCT MANAGEMENT</h5>
+        <div class="prod">
+        <p>Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live. This iterative process allows for changes as business requirements evolve.</p>
     </div>
-</div>
+        
+     </div>
+    </div> -->
+<!-- </div> -->
+<!-- </div> -->
 
 
-<div class="portfolio">
+
+<!-- <div class="portfolio">
     <div class="row">
         <div class=""></div> 
-    </div>
-</div> 
- <div class="portfolio"style="overflow-x:hidden;"><br>
+    </div> -->
+<!-- </div>  -->
+ <!-- <div class="portfolio"style="overflow-x:hidden;"><br> -->
 <table style="height: 5px;">
     <tc>
         <td id="c">
@@ -111,38 +135,7 @@
         </td>
     </tc>
 
-</table> 
-<!-- </div> -->
-<!-- <div class="container">
-    <div class="row">
-        <div class="col-md-3">
-            <img src="../assets/portfolio/c_image.jpg " alt="">
-        </div>
-        <div class="col-md-3">
-            <img src="../assets/images/work3.jpg" alt="">
-        </div>
-        <div class="col-md-3">
-            <img src="../assets/images/work2.jpg" alt="">
-        </div>
-    <div class="col-md-3">
-        <img src="../assets/images/work4.jpg" alt=""> 
-    </div>
-    </div>
-    <div class="row">
-        <div class="col-md-3">
-            <img src="../assets/images/work5.jpg" alt="">
-        </div>
-        <div class="col-md-3">
-            <img src="../assets/images/work6.jpg" alt="">
-        </div>
-        <div class="col-md-3">
-            <img src="../assets/images/work7.jpg" alt="">
-        </div>
-    <div class="col-md-3">
-        <img src="../assets/images/work8.jpg" alt="">
-    </div>
-    </div>
-</div> -->
+</table>
 <div class="contact">
     <h3>CONTACT US</h3>
  <form>
@@ -170,76 +163,42 @@
 <button type="button" onclick="myFunction()">Submit</button>
  </form>
 </div>
-<!-- <div class="social">
+  <div class="social">
     <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-1">
         <img src="/assets/images/twitter.png" alt="">
     </div>
-    <div class="col-md-8">
+    <div class="col-md-1">
         <img src="/assets/images/dribble.png" alt="">
     </div>
-    <div class="col-md-">
+    <div class="col-md-1">
         <img src="/assets/images/facebook.png" alt="">
-
     </div>
+    <div class="col-md-1">
+        <img src="/assets/images/g_plus.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/skype.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/stumble_upon.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/behance.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/pinterest.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/flickr.png" alt="">
+    </div>
+    <div class="col-md-1">
+        <img src="/assets/images/you_tube.png" alt="">
+    </div>
+    
 
-</div>
-
-</div> -->
-<div class="span">
-<table style="padding-left: 200px;">
-    <tc>
-        <td>
-            <img src="/assets/images/twitter.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/dribble.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/facebook.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/g_plus.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/skype.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/stumble_upon.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/behance.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/pinterest.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/flickr.png" alt="">
-        </td>
-    </tc>
-    <tc>
-        <td>
-            <img src="/assets/images/you_tube.png" alt="">
-        </td>
-    </tc>
-</table>
-</div>
+</div> 
+</div> 
 <div class="footer">
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
