styled the images in the portfolio to customise the toggle effect

--- a/index.html
+++ b/index.html
@@ -71,47 +71,47 @@
             </div>
         </div>
     
-<table style="height: 5px;">
+<table style="width: auto;">
     <tc>
-        <td id="c">
-            <img src="../assets/portfolio/c_image.jpg " alt=""><br>
+        <td>
+            <img src="../assets/portfolio/c_image.jpg " alt="">
         </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work3.jpg" alt=""><br>
+        <img src="../assets/images/work3.jpg" alt="">
     </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work2.jpg " alt=""><br>
+        <img src="../assets/images/work2.jpg " alt="">
     </td>
     </tc>
     <tc>
         <td>
-        <img src="../assets/images/work4.jpg" alt=""><br>
+        <img src="../assets/images/work4.jpg" alt="">
     </td>
     </tc>
 </table>
 <table> 
     <tc>
         <td>
-            <img src="../assets/images/work5.jpg" alt=""><br>
+            <img src="../assets/images/work5.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work6.jpg" alt=""><br>
+            <img src="../assets/images/work6.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work7.jpg" alt=""><br>
+            <img src="../assets/images/work7.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work8.jpg" alt=""><br>
+            <img src="../assets/images/work8.jpg" alt="">
         </td>
     </tc>
 
