placed the social icons under the footer class for easy styling

--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
 <button type="button" onclick="myFunction()">Submit</button>
  </form>
 </div>
-  <div class="social">
+  <!-- <div class="social">
     <div class="row">
     <div class="col-md-1">
-        <img src="/assets/images/twitter.png" alt="">
+        
     </div>
     <div class="col-md-1">
         <img src="/assets/images/dribble.png" alt="">
@@ -178,8 +178,19 @@
     
 
 </div> 
-</div> 
+</div>  -->
 <div class="footer">
+    <!-- <link rel="stylesheet" href="https://bit.ly/3aaA5yj"alt=/assets/images/twitter.png> -->
+    <img src="/assets/images/twitter.png" alt="">
+    <img src="/assets/images/facebook.png" alt="">
+    <img src="/assets/images/g_plus.png" alt="">
+    <img src="/assets/images/skype.png" alt="">
+    <img src="/assets/images/stumble_upon.png" alt="">
+    <img src="/assets/images/behance.png" alt="">
+    <img src="/assets/images/pinterest.png" alt="">
+    <img src="/assets/images/flickr.png" alt="">
+    <img src="/assets/images/you_tube.png" alt="">
+
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
 </div>
