--- a/index.html
+++ b/index.html
@@ -152,59 +152,23 @@
     <button type="button" onclick="myFunction()">Submit</button>
 </form>
 </div>
-<!-- <div class="social">
-    <div class="row">
-    <div class="col-md-1">
-        
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/dribble.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/facebook.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/g_plus.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/skype.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/stumble_upon.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/behance.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/pinterest.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/flickr.png" alt="">
-    </div>
-    <div class="col-md-1">
-        <img src="/assets/images/you_tube.png" alt="">
-    </div>
-    
 
-</div> 
-</div>  -->
 <div class="footer">
-    <!-- <link rel="stylesheet" href="https://bit.ly/3aaA5yj"alt=/assets/images/twitter.png> -->
-    <img src="/assets/images/twitter.png" alt="">
-    <img src="/assets/images/facebook.png" alt="">
-    <img src="/assets/images/g_plus.png" alt="">
-    <img src="/assets/images/skype.png" alt="">
-    <img src="/assets/images/stumble_upon.png" alt="">
-    <img src="/assets/images/behance.png" alt="">
-    <img src="/assets/images/pinterest.png" alt="">
-    <img src="/assets/images/flickr.png" alt="">
-    <img src="/assets/images/you_tube.png" alt="">
+    <img src="./assets/images/twitter.png" alt="">
+    <img src="./assets/images/facebook.png" alt="">
+    <img src="./assets/images/g_plus.png" alt="">
+    <img src="./assets/images/skype.png" alt="">
+    <img src="./assets/images/stumble_upon.png" alt="">
+    <img src="./assets/images/behance.png" alt="">
+    <img src="./assets/images/pinterest.png" alt="">
+    <img src="./assets/images/flickr.png" alt="">
+    <img src="./assets/images/you_tube.png" alt="">
 
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
 </div>
-<script src="/js/jquery.js"></script>
-<script src="js/script.js"></script>
+<script src="./js/jquery.js"></script>
+<script src=".js/script.js"></script>
 </body>
 
 </html>
