togled the classes design,devpt and product

--- a/index.html
+++ b/index.html
@@ -82,44 +82,44 @@
 <table style="width: auto;">
     <tc>
         <td>
-            <img src="../assets/portfolio/c_image.jpg " alt="">
+            <img src="./assets/portfolio/c_image.jpg " alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work3.jpg" alt="">
+            <img src="./assets/images/work3.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work2.jpg " alt="">
+            <img src="./assets/images/work2.jpg " alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work4.jpg" alt="">
+            <img src="./assets/images/work4.jpg" alt="">
         </td>
     </tc>
 </table>
 <table>
     <tc>
         <td>
-            <img src="../assets/images/work5.jpg" alt="">
+            <img src="./assets/images/work5.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work6.jpg" alt="">
+            <img src="./assets/images/work6.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work7.jpg" alt="">
+            <img src="./assets/images/work7.jpg" alt="">
         </td>
     </tc>
     <tc>
         <td>
-            <img src="../assets/images/work8.jpg" alt="">
+            <img src="./assets/images/work8.jpg" alt="">
         </td>
     </tc>
 
@@ -167,8 +167,8 @@
     <h3>DELANI STUDIO</h3>
     <p>2020</p>
 </div>
-<script src="./js/jquery.js"></script>
-<script src=".js/script.js"></script>
+<script src="js/jquery.js"></script>
+<script src="js/script.js"></script>
 </body>
 
 </html>
