added a mailchimp link on the html

--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 </div>
 <script src="js/jquery.js"></script>
 <script src="js/script.js"></script>
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us4.list-manage.com","uuid":"561de8141452d1177fd54b732","lid":"80272e5b32","uniqueMethods":true}) })</script>
 </body>
 
 </html>
