--- a/index.html
+++ b/index.html
@@ -152,7 +152,10 @@
             <td>
                 <div id="image8">
                     <img src="./assets/images/work8.jpg" alt="">
-                    <p id="par8"></p>
+                    <div id="par8">
+                        <p>ADVERT</p>
+                    </div>
+                    
                 </div>
             </td>
         </tc>
